--- a/accessible-design.html
+++ b/accessible-design.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Pontano+Sans&display=swap" rel="stylesheet">
 	</head>
-	<body>
+	<body id="home">
 		<div id="wrapper">
 			<header>
 				<h1>Myth: Accessibility is 'blind people'</h1>
@@ -24,14 +24,13 @@
 				<p>Accessibility can be broken down into four key categories:</p>
 				<nav>
 					<ul>
-						<li><a href="#section1">Visual</a></li>
-						<li><a href="#section2">Auditory</a></li>
-						<li><a href="#section3">Motor</a></li>
-						<li><a href="#section4">Cognitive</a></li>
-						<li><a href="#section5">Temporal Disabilities</a></li>
+						<li class="link1"><a href="#section1">Visual</a></li>
+						<li class="link2"><a href="#section2">Auditory</a></li>
+						<li class="link3"><a href="#section3">Motor</a></li>
+						<li class="link4"><a href="#section4">Cognitive</a></li>
+						<li class="link5"><a href="#section5">Temporal Disabilities</a></li>
 					</ul>
 				</nav>
-				<hr>
 				<section id="section1">
 					<h4>Visual</h4>
 					<p>This can be non-sighted users, users with low-vision, users with obstructed vision, or even simply your aging parents.</p>
@@ -43,7 +42,6 @@
 						<li>Albinism</li>
 					</ul>
 				</section>
-				<hr>
 				<section id="section2">
 					<h4>Auditory</h4>
 					<p>The web is a visual medium, but captions and fallbacks for sound-necessary media need to be considered for hearing impaired users.</p>
@@ -55,7 +53,6 @@
 						<li>Otosclerosis</li>
 					</ul>
 				</section>
-				<hr>
 				<section id="section3">
 					<h4>Motor</h4>
 					<p>People with motor impairments typically use a wide range of assistive technology from specialized keyboards, to eye trackers, to using single buttons (a device known as a “switch”) to navigate their computers.</p>
@@ -67,7 +64,6 @@
 						<li>Muscular dystrophy</li>
 					</ul>
 				</section>
-				<hr>
 				<section id="section4">
 					<h4>Cognitive</h4>
 					<p>Relates to the ease processing of information.</p>
@@ -79,13 +75,15 @@
 						<li>Dyslexia</li>
 					</ul>
 				</section>
-				<hr>
 				<section id="section5">
 					<h4>Temporary disabilities</h4>
 					<p>While each of these disabilities is usually permanent, there are often situations in which even fully-abled people are “temporarily disabled”. For instance, an arm or wrist injury may temporarily prevent you from being able to use a mouse.</p>
 					<p>Robin Christopherson (an accessibility expert who is blind) once spoke about how people that are driving but use hands-free sets or have their phone connected to the car radio are temporarily disabled, as they use the phone differently to how they normally would. Of course, no one should browse websites while they are driving but it is important to understand different situations like that, where the user may not have special software installed that a disabled user might.</p>
 				</section>
 			</article>
+			<footer>
+				<a href="#home">Go back up</a>
+			</footer>
 		</div>
 	</body>
 </html>
