--- a/accessible-design.html
+++ b/accessible-design.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Pontano+Sans&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Mukta|Patua+One|Yeseva+One&display=swap" rel="stylesheet">
 	</head>
 	<body id="home">
 		<div id="wrapper">
@@ -15,7 +16,7 @@
 				In reality, web accessibility is a subset of User Experience (UX) focused on making your websites 
 				usable by the widest range of people possible, including those who have disabilities.</p>
 				
-				<blockquote cite="https://www.washington.edu/doit/what-difference-between-accessible-usable-and-universal-design"><p><i><b>"Accessible design</b> is a design process in which the needs of people with disabilities are 
+				<blockquote cite="https://www.washington.edu/doit/what-difference-between-accessible-usable-and-universal-design"><p><i>"<b>Accessible design</b> is a design process in which the needs of people with disabilities are 
 				specifically considered. Accessibility sometimes refers to the characteristic that products, services, and 
 				facilities can be independently used by people with a variety of disabilities."</i></p></blockquote>
 			</header>
