added normalize.css , change in html and style.css

--- a/accessible-design.html
+++ b/accessible-design.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>Accessibility Design</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Pontano+Sans&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Mukta|Patua+One|Yeseva+One&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body id="home">
 		<div id="wrapper">
